--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,11 @@ package-lock.json
 *~*
 *#*
 
-config/_development.json
-config/_production.json
+# config/_development.json
+# config/_production.json
 
-dbs/
+# dbs/
 
 public/scripts/main.*
 
-storage/database/
+# storage/database/
